cmake_minimum_required(VERSION 3.6)
project(arrow)

# add_definitions(-DASIO_STANDALONE)
# add_definitions(-DASIO_HAS_STD_ADDRESSOF)
# add_definitions(-DASIO_HAS_STD_ARRAY)
# add_definitions(-DASIO_HAS_CSTDINT)
# add_definitions(-DASIO_HAS_CO_AWAIT)
# add_definitions(-DASIO_HAS_STD_SHARED_PTR)
# add_definitions(-DASIO_HAS_STD_TYPE_TRAITS)
# add_definitions(-DASIO_HAS_VARIADIC_TEMPLATES)
# add_definitions(-DASIO_HAS_STD_FUNCTION)
# add_definitions(-DASIO_HAS_STD_CHRONO)
# add_definitions(-DBOOST_ALL_NO_LIB)
# add_definitions(-DASIO_SEPARATE_COMPILATION)


add_definitions(-DARROW_EXPORTING)
add_definitions(-D _HAS_CXX17=1)
add_definitions(-D _HAS_CXX20=1)
add_definitions(-D _WIN32_WINNT=0x0601)
# add_definitions(-D _MSC_VER=1916)
add_definitions(-D _MSC_VER=1920)
set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
# set(CMAKE_CXX_STANDARD 11)

include_directories(src)
include_directories(ext/include)
include_directories(src/arrow/io)
aux_source_directory(src/arrow         impl1)
aux_source_directory(src/gandiva       impl2)
aux_source_directory(src/parquet       impl3)
aux_source_directory(src/plasma        impl4)
aux_source_directory(src/arrow/io      impl5)
aux_source_directory(src/arrow/array   impl6)
aux_source_directory(src/arrow/csv     impl7)
aux_source_directory(src/arrow/compute impl8)
aux_source_directory(src/arrow/flight  impl9)
aux_source_directory(src/arrow/gpu     impl9)
set(source ${impl1} ${impl5} ${impl6} ${impl7} ${impl8} ${impl9} )

add_library(arrow STATIC ${source})
target_compile_features(arrow PRIVATE cxx_std_17)
target_compile_options(arrow PRIVATE /bigobj)
target_link_libraries(arrow ext/lib/gtestd)
